--- a/course1/exercise2/style.css
+++ b/course1/exercise2/style.css
@@ -2,16 +2,49 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Georgia', serif;
+	font-family: "Lucida Console", Monaco, monospace
 }
-
+body {
+	background-color: #467095;
+}
+h {
+	color: #b2b7b6;
+	font-weight: 400;
+	font-family: "Lucida Console", Monaco, monospace;
+	font-size: 30px;
+	line-height: 40px;
+	letter-spacing: 0.1px;
+	text-align: start;
+	position: -webkit-sticky;
+	top: 30%;
+	right: 25%;
+	width: 50%;
+	padding: 1px 16px;
+	border-radius: 8px;
+	z-index: 10000;
+}
+a {
+	color: green;
+}
+a:hover { /* link on hover */
+	color: rgba(0, 128, 0, 0.681);
+}
+a:visited {
+	color: rgb(255, 234, 0);
+}
+a:active {
+	color: rgb(255, 0, 0);
+}
+a:link {
+	color: rgb(0, 75, 128);
+}
 /* 悬浮进度条容器 */
 .progress-box {
 	position: fixed;
 	top: 200px;
 	right: 20px;
 	width: 0px;
-	background: #fff;
+	background: rgb(70, 112, 154);
 	border: 1px solid #ccc;
 	border-radius: 8px;
 	box-shadow: 0 2px 8px rgba(85, 85, 85, 0.928);
@@ -36,31 +69,6 @@
 	border-radius: 6px;
 	transition: width 0.3s;
 }
-p {
-	color: green;
-	font-weight: 600;
-	font-style: inherit;
-	font-size: 70px;
-	line-height: 20px;
-	letter-spacing: 2px;
-	text-align: center;
-}
-a {
-	color: green;
-}
-a:hover { /* link on hover */
-	color: rgba(0, 128, 0, 0.681);
-}
-a:visited {
-	color: rgb(255, 234, 0);
-}
-a:active {
-	color: rgb(255, 0, 0);
-}
-a:link {
-	color: rgb(0, 75, 128);
-}
-
 :first-child
 :nth-child(2)
 :before
