--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: "Lucida Console", Monaco, monospace
+	font-family: "Lucida Console", Monaco, monospace;
 }
 body {
 	background-color: #467095;
@@ -10,44 +10,72 @@ body {
 p {
 	color: #b2b7b6;
 	font-weight: 400;
-	font-family: "Lucida Console", Monaco, monospace;
 	font-size: 30px;
 	line-height: 40px;
-	letter-spacing: normal;
-	text-align: start;
-	position: -webkit-sticky;
-	top: 30%;
-	right: 25%;
+	text-align: center;
+	position: absolute;
+	top: 120%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	width: 50%;
 	padding: 1px 16px;
 	border-radius: 8px;
 	z-index: 10000;
 }
+h1{
+	color: #9fc824;
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 50px;
+	text-align: left;
+	position: fixed;
+	top: 30%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	padding: 10px 16px;
+	border-radius: 8px;
+	z-index: 10000;
+}
+.navigation  {
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	background: #f9f9f9;
+	padding: 10px 10px;
+	border-radius: 8px;
+	box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+	z-index: 10000;
+	opacity: 0;
+	transition: opacity 0.3s;
+}
+.navigation:hover {
+	opacity: 1;
+}
 a {
 	color: green;
 }
-a:hover { /* link on hover */
-	color: rgba(0, 128, 0, 0.681);
+a:hover {
+	color: rgba(0, 128, 0, 0.68);
 }
 a:visited {
-	color: rgb(255, 234, 0);
+	color: #ffea00;
 }
 a:active {
-	color: rgb(255, 0, 0);
+	color: #ff0000;
 }
 a:link {
-	color: rgb(0, 75, 128);
+	color: #004b80;
 }
 /* 悬浮进度条容器 */
 .progress-box {
 	position: fixed;
 	top: 200px;
 	right: 20px;
-	width: 0px;
-	background: rgb(70, 112, 154);
+	background: #46709a;
 	border: 1px solid #ccc;
 	border-radius: 8px;
-	box-shadow: 0 2px 8px rgba(85, 85, 85, 0.928);
+	box-shadow: 0 2px 8px rgba(85, 85, 85, 0.93);
 	z-index: 9999;
 	padding: 16px;
 }
