--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ p{
 	text-shadow: #151d25 0.5px 1px 1px;
 	z-index: 10000;
 	color: #e6bf16;
-	position: fixed;
+	position: absolute;
 	left: 0;
 	bottom: 0;
 	width: 1000px;
@@ -50,7 +50,7 @@ h1{
 	font-size: 40px;
 	line-height: 50px;
 	text-align: left;
-	position: fixed;
+	position: absolute;
 	top: 25%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -61,9 +61,9 @@ h1{
 	z-index: -1;
 }
 .navigation  {
-	position: fixed;
+	position: absolute;
 	top: 20px;
-	right:40px;
+	left:40px;
 	background: #b2b7b6;
 	padding: 10px 10px;
 	border-radius: 8px;
@@ -76,16 +76,16 @@ h1{
 .navigation-mobile  {
 	text-shadow: #151d25 1px 1px 2px;
 	font-size: 40px;
-	position: fixed;
+	position: absolute;
 	top: 115px;
-	right: 70px;
+	left: 70px;
 	color:#b2b7b6;
 }
 .navigation:hover {
 	opacity: 1;
 }
 .handmade {
-	position: fixed;
+	position: absolute;
 	left: 5%;
 	bottom: 35%;
 	background: #d6dcda;
