--- a/exercise6.css
+++ b/exercise6.css
@@ -1,8 +1,9 @@
-.sky{
+#sky-btn{
     position: absolute;
-    width: 100%;
     left: 50%; top: 15%;
-}
+    z-index: 100;
+  }
+
 
 .moon{
     display: block;
@@ -32,14 +33,16 @@
   width: 220px; height: 220px;
   opacity: 0.3;
 }
-body.darkmode {
+
+#darkmode {
+	position: absolute;
+  left:50%; top: 7%;
+}
+
+body.dark {
 	background: black;
 	color: white;
-
-	/*	redefine a CSS variable */
+  	/*	redefine a CSS variable */
 	--accent-color: rgb(0,255,0);
 }
 
-body.darkmode button{
-	color: white;
-}
