--- a/project1/card1.css
+++ b/project1/card1.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
+    background: linear-gradient(135deg, #1a2a6c, #b21f1f, #e7d481, #b6c39f);
     padding: 20px;
 }
 
