--- a/projects/project2/tank.css
+++ b/projects/project2/tank.css
@@ -49,6 +49,7 @@ p{
     color: #010c1b;
     max-width: 800px;
     margin: 15px auto;
+    font-family: "Comfortaa", sans-serif;
     line-height: 1.6;
     padding: 0 10px 0 20px;
 
